--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ header-img: "img/image_here"
 
     <p><strong>齐晨宇</strong>，一个物理、生物医学与工程交叉学科博士生，现在在加拿大萨斯喀彻温大学。</p>
 
-    <p>本职是同步辐射相关研究，爱好乱学东西，比如搭这个网站、拼个机器人、数据分析、写东西、画东西。</p>
+    <p>本职是同步辐射相关研究，爱好胡思乱想和学各种东西，比如搭这个网站、拼个机器人、数据分析、写东西、画东西。希望能越来越了解这个世界。</p>
 
     <p>这是用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我的GitHub主页<a href="https://github.com/darwinqii">darwinqii</a> 与 简书主页<a href="https://http://www.jianshu.com/u/413cbec111f9">👉DarwinQii</a>欢迎光临</p>
 
